
Brought the section table into play to represent large organisational
sections of a school. A section is really a grouping of yeargroups
and/or courses. It can have a group for permissions and an address. By
default the installation creates a "Whole School" section with secid=1
which you may want to re-name.

The new_budget script now requires a budget to belong to a section.

The categdef table has a new type='bud' for ebabling budgets which are
not tied to curriculum subjects like 'Stationary' etc.

The groups table has been given a type field to make the different
sorts of groups explicit. This also allows for groups with functions
beyond academic and pastoral to be incorporated. So, currently
a=academic (was implicity crid and bid with yid NULL), p=pastoral (was
implicity yid) and b=budget (uses nothing else).



Version ClaSS-0.8.40 release (2008/02/21)
-----------------------------------------

Renamed the portfolio scripts so that eportfolio is used consistently
throughout.

Added the eportfolio function library.

The enrolments_matrix can now handle R for students repeating a year.

An attendance summary is now included in reports, using
fetchAttendanceSummary() which contains the rules for calculating the
various statistics. This in turn calls upon the basic
count_attendnace() to do the db count.

The report_attendnace script now accepts a from and to date, and uses
the new attendance summary functions to do the reporting. Added a
template for printing a detailed attendance report.

Reworked the report_comments scripts to be in-line with checksids and
improved the table to high-light ups and downs in student progress. 

New templates for printing from the Report book, progress_summary
added for detailed reporting of comments, and incidents_summary for
listing of incidents.

The fetchComments() now takes an end and start date.

New fetchCategorydef() function for returning any set of categorydefs
based on their type.


