@@ -50,7 +50,7 @@ $Budget=fetchBudget();
   	$d_group=mysql_query("SELECT gid AS id, subject.name AS name FROM groups 
 						JOIN subject ON subject_id=subject.id 
 						WHERE groups.course_id='%' ORDER BY groups.name"); 
-	$listname='gid';
+x	$listname='gid';
 	$listlabel='department';
 	$listeitheror='Catid';
 	$required='eitheror';
